# async_simple

./: .bazelignore  .bazelrc  .clang-format  .clangd  .gitignore  BUILD.bazel  CMakeLists.txt  CMakeLists.txt.orig  ChangeLog  MODULE.bazel  Makefile  NOTICE  README.md  README_CN.md  WORKSPACE.bazel  conanfile.py  cxx_modules_rules_clang.cmake  package.json  xmake.lua
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: Performance.yml  PerformanceCommit.yml  PerformancePR.yml  bazel.yml  clang-format.yml  cmake.yml  conan.yml  (+5 more)
async_simple/: CMakeLists.txt  Cancellation.h  Collect.h  Common.h  CommonMacros.h  Executor.h  Future.h  FutureState.h  Helper.h  IOExecutor.h  Invoke.h  LocalState.h  MoveWrapper.h  Promise.h  Signal.h  Traits.h  Try.h  Unit.h  async_simple.cppm  std.mock.cppm
async_simple/coro/: CoAwait.h  Collect.h  ConditionVariable.h  CountEvent.h  DetachedCoroutine.h  Dispatch.h  Event.h  FutureAwaiter.h  Generator.h  Latch.h  Lazy.h  LazyHelper.h  LazyLocalBase.h  Mutex.h  PromiseAllocator.h  ResumeBySchedule.h  Semaphore.h  SharedLock.h  SharedMutex.h  Sleep.h  SpinLock.h  SyncAwait.h  Task.h  Traits.h  UpdatePriority.h  Util.h  ViaCoroutine.h
async_simple/coro/test/: BUILD.bazel  CMakeLists.txt  ConditionVariableTest.cpp  DispatchTest.cpp  FutureAwaiterTest.cpp  GeneratorTest.cpp  LatchTest.cpp  LazyLocalTest.cpp  LazyTest.cpp  LocalExecutorTest.cpp  MutexTest.cpp  PMRLazyTest.cpp  ResumeByScheduleTest.cpp  SemaphoreTest.cpp  SharedLockTest.cpp  SharedMutexTest.cpp  SleepTest.cpp  SpinLockTest.cpp  Time.h  TraitsTest.cpp  UpdatePriorityTest.cpp  ViaCoroutineTest.cpp
async_simple/executors/: LocalExecutor.h  SimpleExecutor.cpp  SimpleExecutor.h  SimpleIOExecutor.h
async_simple/executors/test/: BUILD.bazel  CMakeLists.txt  SimpleExecutorTest.cpp  SimpleIOExecutorTest.cpp
async_simple/experimental/: coroutine.h
async_simple/test/: BUILD.bazel  CMakeLists.txt  CancellationTest.cpp  FutureStateTest.cpp  FutureTest.cpp  PMRLazyTest.cpp  TryTest.cpp  dotest.cpp  unittest.h
async_simple/uthread/: Async.h  Await.h  Collect.h  Latch.h  Uthread.h
async_simple/uthread/internal/: thread.cc  thread.h  thread_impl.h
async_simple/uthread/internal/Linux/riscv64/: jump_riscv64_sysv_elf_gas.S  make_riscv64_sysv_elf_gas.S  ontop_riscv64_sysv_elf_gas.S
async_simple/uthread/internal/Windows/AMD64/: jump_x86_64_ms_pe_masm.asm  make_x86_64_ms_pe_masm.asm  ontop_x86_64_ms_pe_masm.asm
async_simple/uthread/test/: BUILD.bazel  CMakeLists.txt  UthreadAllocTest.cpp  UthreadTest.cpp
async_simple/util/: Condition.h  Queue.h  ThreadPool.h  move_only_function.h
async_simple/util/test/: BUILD.bazel  CMakeLists.txt  MoveOnlyFunctionTest.cpp  ThreadPoolTest.cpp
async_simple_module/: CMakeLists.txt  Common.cppm  Executor.cppm  Future.cppm  FutureState.cppm  IOExecutor.cppm  Invoke.cppm  LocalState.cppm  Makefile  MoveWrapper.cppm  Traits.cppm  Try.cppm  Unit.cppm  async_simple.cppm
async_simple_module/coro/: CoAwait.cppm  Collect.cppm  Event.cppm  Lazy.cppm  Sleep.cppm  Task.cppm  Traits.cppm  Util.cppm
async_simple_module/executors/: SimpleExecutor.cppm  SimpleIOExecutor.cppm
async_simple_module/experimental/: coroutine.cppm
async_simple_module/test/: CMakeLists.txt  FutureStateTest.cpp  FutureTest.cpp  Makefile  TryTest.cpp  dotest.cpp  unittest.h
async_simple_module/test/coro/: CMakeLists.txt  LazyTest.cpp  SleepTest.cpp  Time.h  ViaCoroutineTest.cpp
async_simple_module/test/executors/: SimpleIOExecutorTest.cpp
async_simple_module/test/uthread/: CMakeLists.txt  UthreadTest.cpp
async_simple_module/test/util/: CMakeLists.txt  ThreadPoolTest.cpp
async_simple_module/uthread/: Async.cppm  Await.cppm  Collect.cppm  Latch.cppm  Uthread.cppm
async_simple_module/uthread/internal/: thread.cc  thread.cppm  thread_impl.cppm
async_simple_module/util/: Condition.cppm  Queue.cppm  ThreadPool.cppm
bazel/config/: BUILD.bazel  copt.bzl  deps.bzl
bazel/support/: BUILD.bazel  README.md  WORKSPACE.bazel  hello.cc
benchmark-monitoring/: data.js
benchmarks/: BUILD.bazel  CMakeLists.txt  CallDepth.bench.cpp  CallDepth.bench.h  Future.bench.cpp  Future.bench.h  Lazy.bench.cpp  Lazy.bench.h  Mutex.bench.cpp  Mutex.bench.h  PureSwitch.bench.cpp  PureSwitch.bench.h  ReadFile.bench.cpp  ReadFile.bench.h  ReadFileUtil.hpp  SharedLock.bench.cpp  SharedLock.bench.h  SharedMutex.bench.cpp  SharedMutex.bench.h  SpinLock.bench.cpp  SpinLock.bench.h  ThreadPool.bench.cpp  ThreadPool.bench.h  Uthread.bench.cpp  Uthread.bench.h  benchmark_main.cpp
cmake/: FindAio.cmake  FindBenchmark.cmake  FindGMock.cmake  FindGTest.cmake  Findasio.cmake  IsACC.cpp
dbg/: LazyStack.py
demo_example/: BUILD.bazel  CMakeLists.txt  CountChar.cpp  CountCharUsingModules.cpp  ReadFiles.cpp  asio_coro_util.hpp  asio_util.hpp  async_echo_client.cpp  async_echo_server.cpp  async_multiple_core_echo_server.cpp  block_echo_client.cpp  block_echo_server.cpp  io_context_pool.hpp  pmr_lazy.cpp
demo_example/Input/: 1.txt  10.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  file.txt
demo_example/asio/asio/detail/: thread_info_base.hpp
demo_example/coro_epoll/: CurrentCoroutine.h  HookSysCall.h  IoContext.h  Socket.h
demo_example/http/: http_request.hpp  http_response.hpp
demo_example/http/block_http/: block_connection.hpp  block_http_server.cpp
demo_example/http/coroutine_http/: connection.hpp  http_client.cpp  http_server.cpp  multiple_core_http_server.cpp
demo_example/smtp/: smtp_client.cpp  test_file.txt
demo_example_module/: CMakeLists.txt  CountChar.cpp  Makefile  ReadFiles.cpp  asio_util.cppm  async_echo_client.cpp  async_echo_server.cpp  block_echo_client.cpp  block_echo_server.cpp
demo_example_module/Input/: 2.txt
demo_example_module/http/: http_request.hpp  http_response.hpp  index.html
demo_example_module/http/block_http/: block_connection.hpp  block_http_server.cpp
demo_example_module/http/coroutine_http/: connection.hpp  http_client.cpp  http_server.cpp
docs/: index.md
modules/: CMakeLists.txt  async_simple.cppm
third_party_module/: Makefile
(+171 files in other folders)
